<resources>
    <string name="app_name">GPCB LTA  Tracking</string>

    <string name="location_settings_inadequate_warning">The location settings on the device are not
        adequate to run this sample. Fix in Settings.</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="user_name">User Name*</string>
    <string name="location">GPS Location :</string>
    <string name="imei_no">IMEI No :</string>
    <string name="title_tracklog_detail">TrackLog Details</string>
    <string name="time_interval">Location Interval  : </string>
    <string name="sync_interval">Send Interval  :</string>
    <string name="password">PassWord*</string>
    <string name="get_configuration">Get Configuration</string>
    <string name="send_track_log">Send TrackLog</string>
    <string name="userName_error">Please Enter User Name*</string>
    <string name="password_error">Please Enter Password*</string>

</resources>
